<resources>
    <string name="app_name">Vodea</string>
    <string name="title_activity_details">Details</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="tes">tes\ntes\ntes\ntes\ntes\ntes\ntes\ntes\ntes\ntes\ntes\ntes\ntes\ntes\ntes\ntes\ntes\ntes\ntes\ntes\ntes\ntes\ntes\ntes\ntes\ntes\ntes\ntes\ntes\ntes\ntes\ntes\n</string>

    <string name="menu_home">Vodea</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="Email">Email :</string>
    <string name="Handphone">Handphone :</string>
    <string name="AccountName">Account Name\'s</string>
    <string name="nim">201810370311152</string>
    <string name="DateBirth">Date Birth :</string>
    <string name="dmy">dd-mm-yy</string>
    <string name="nomorhp">085536544446</string>
    <string name="surel">infotech@umm.ac.id</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in">Sign In</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="detail">Detail</string>
    <string name="create_vote">Create Vote</string>
    <string name="version">Version 1.0</string>
    <string name="optionname">Options 1 name\'s................</string>
    <string name="vote">Vote</string>
    <string name="search">Search</string>
    <string name="search_hint">Masukkan kata</string>
    <string name="voteOption">Tes VoteOption</string>
    <string name="created">Created DD/MM/YYYY , hh:mm:ss</string>
    <string name="Vote_Title">Vote Title</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
</resources>
